--- a/style.css
+++ b/style.css
@@ -72,3 +72,12 @@ button{
 .select-container img{
     width: 35%;
 }
+@media(max-width: 475px) {
+    h1{
+        margin: 0;
+        margin-bottom: 3rem;
+    }
+    .amount{
+        height: 12vh;
+    }
+}
